[fused lib] Publish sample in 8.9 & fix formatting
The recipe version is not yet published in the 8.9 branch as the min
version was not set to a canary.

Fixes some formatting issues and references the recently added fused
library component. Users will file bugs in Android studio component
before being triaged to fused lib component.

Bug: N/a
Test: recipe tests
Change-Id: I777a0344f94cbab03693e87a0ed519f6ea9a4b77

--- a/recipes/applyFusedLibraryPlugin/recipe_metadata.toml
+++ b/recipes/applyFusedLibraryPlugin/recipe_metadata.toml
@@ -8,7 +8,7 @@ description ="""
   """
 
 [agpVersion]
-min = "8.9.0"
+min = "8.9.0-alpha08"
 
 # Relevant Gradle tasks to run per recipe
 [gradleTasks]
@@ -19,10 +19,11 @@ tasks = [
     ":fusedLibrary:publishReleasePublicationToMyrepoRepository",
     ":fusedLibrary:publishReleasePublicationToMyrepoRepository",
     ":app:testDebugUnitTest",
-    ":app:connectedDebugAndroidTest"
 ]
 
 # All the relevant metadata fields to create an index based on language/API/etc'
 [indexMetadata]
-index = []
+index = [
+    "Plugin Features/Fused Library Plugin"
+]
 
